<resources>
    <string name="app_name">Hyper</string>
    <string name="action_drawer_open">Open</string>
    <string name="action_drawer_close">Close</string>
    <string name="create">Create</string>
    <string name="edit">Improve</string>
    <string name="pilot">Pilot</string>
    <string name="settings">Settings</string>
    <string name="help">FAQ</string>
    <string name="hyper"><![CDATA[</hyper>]]></string>
    <string name="ok">OK</string>
    <string-array name="drawer_items">
        <item>@string/create</item>
        <item>@string/edit</item>
        <item>@string/pilot</item>
        <item>@string/assist</item>
        <item>@string/settings</item>
        <item>@string/help</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="resources_images">IMAGES</string>
    <string name="resources_fonts">FONTS</string>
    <string name="resources_css">CSS</string>
    <string name="resources_js">JS</string>
    <string name="about_name">Name</string>
    <string name="about_author">Author</string>
    <string name="about_desc">Description</string>
    <string name="about_keywords">Keywords</string>
    <string name="feedback_title">Title</string>
    <string name="feedback_content">Content</string>
    <string name="create_keywords">Keywords (separated with commas)</string>
    <string name="create_favicon">Favicon</string>
    <string name="favicon_default">Default</string>
    <string name="favicon_choose">Choose</string>
    <string name="dark_theme">Night Mode</string>
    <string name="dark_theme_desc">Put a little less stress on your eyes.</string>
    <string name="import_image">Image</string>
    <string name="import_font">Font</string>
    <string name="import_css">CSS</string>
    <string name="import_js">JS</string>
    <string name="import_html">HTML</string>
    <string name="view_resources">Resources</string>
    <string name="about_project">About</string>
    <string name="feedback_note">If you have a GitHub user name then please include it in the content.</string>
    <string name="permission_network_rationale">Network state permission is needed to check if network is up.</string>
    <string name="permission_internet_rationale">Internet permission is needed to test projects.</string>
    <string name="permission_storage_rationale">Storage permission is needed to create and edit projects.</string>
    <string name="set_pin">PIN</string>
    <string name="set_pin_desc">Use a PIN for extra security.</string>
    <string name="not_set">NOT SET</string>
    <string name="auto_save_freq">AutoSave Frequency</string>
    <string name="auto_save_freq_desc">Choose how long to wait before saving a file.</string>
    <string name="create_color">Colour</string>
    <string name="about_color">Colour</string>
    <string name="open_in_web_browser">Web Browser</string>
    <string name="run_project">Run</string>
    <string name="allow_content_access">Allow Content Access</string>
    <string name="allow_content_access_desc">Set content URL access support.</string>
    <string name="allow_file_access">Allow File Access</string>
    <string name="allow_file_access_desc">Set file access support.</string>
    <string name="allow_file_access_from_file_urls">Allow File Access From File URLs</string>
    <string name="allow_file_access_from_file_urls_desc">Set whether JavaScript running in the context of a file scheme URL can access content from other file scheme URLs.</string>
    <string name="allow_universal_access_from_file_urls">Allow Universal Access From File URLs</string>
    <string name="allow_universal_access_from_file_urls_desc">Set whether JavaScript running in the context of a file scheme URL can access content from any origin.</string>
    <string name="block_network_image">Block Network Image</string>
    <string name="block_network_image_desc">Set whether to load image resources from the network.</string>
    <string name="block_network_loads">Block Network Loads</string>
    <string name="block_network_loads_desc">Set whether to load any resources from the network.</string>
    <string name="built_in_zoom_controls">BuiltIn Zoom Controls</string>
    <string name="built_in_zoom_controls_desc">Set whether the builtin zoom mechanisms are being used.</string>
    <string name="database_enabled">Database</string>
    <string name="database_enabled_desc">Set whether the database storage API is enabled.</string>
    <string name="display_zoom_controls">Display Zoom Controls</string>
    <string name="display_zoom_controls_desc">Set whether to display onscreen zoom controls while using builtin zoom mechanisms.</string>
    <string name="dom_storage_enabled">DOM Storage</string>
    <string name="dom_storage_enabled_desc">Set whether the DOM Storage APIs are enabled.</string>
    <string name="javascript_can_open_windows_automatically">JavaScript Can Open Windows Automatically</string>
    <string name="javascript_can_open_windows_automatically_desc">Set whether JavaScript can open windows automatically.</string>
    <string name="javascript_enabled">JavaScript</string>
    <string name="javascript_enabled_desc">Set whether JavaScript is enabled.</string>
    <string name="load_with_overview_mode">Load with Overview Mode</string>
    <string name="load_with_overview_mode_desc">Set whether pages are loaded in overview mode.</string>
    <string name="loads_images_automatically">Automatic Image Loading</string>
    <string name="loads_images_automatically_desc">Set whether images are loaded automatically.</string>
    <string name="save_form_dats">Save Form Data</string>
    <string name="save_form_data_desc">Set whether form data is saved.</string>
    <string name="use_wide_view_port">Wide View Port</string>
    <string name="use_wide_view_port_desc">Set whether the \"viewport\" HTML meta tag is supported or will a wide viewport be used.</string>
    <string name="web_settings">Settings</string>
    <string name="replace_from">Replace From</string>
    <string name="replace_to">Replace To</string>
    <string name="default_auto_save_freq">1s</string>
    <string name="repair">First Aid</string>
    <string name="repair_desc">Project no longer showing in the Improve or Pilot menus? Click here to repair any broken projects.</string>
    <string name="view_logs">Logs</string>
    <string name="donate_to_dev">Donate to the developer</string>
    <string name="contribute_to_the_app">Contribute to the app</string>
    <string name="assist">Assist</string>
    <string name="license">The MIT License (MIT)\n\nCopyright &#169; 2016 OpenMatter\n\nPermission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>
    <string name="import_not_java">Import</string>
    <string name="create_not_java">New</string>
    <string name="view_travis_builds">View Travis Builds</string>
    <string name="change_undone">This change cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="goodbye">Goodbye</string>
    <string name="oops_delete">Oops! Something went wrong while deleting</string>
    <string name="cancel">Cancel</string>
    <string name="create_project">Create project</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="submit">Submit</string>
    <string name="error_feedback_title">Please enter a title.</string>
    <string name="error_feedback_content">Please enter some content.</string>
    <string name="oops_internet">Oops! Looks like you are not connected to the internet.</string>
    <string name="feedback_thanks">Feedback sent. Thank you. :)</string>
    <string name="pin_request">Please enter a new PIN</string>
    <string name="accept">Accept</string>
    <string name="error_pin">The pin must consist only of 4 digits.</string>
    <string name="current_pin">Please enter your current PIN.</string>
    <string name="repair_key">Repair</string>
    <string name="repaired">repaired</string>
    <string name="failed">failed</string>
    <string name="already_exists">already exists</string>
    <string name="project_success">Your project has been successfully created!</string>
    <string name="project_fail">It seems something went wrong while creating the project.</string>
    <string name="cannot_delete">Cannot delete</string>
    <string name="name_error">Please enter a name</string>
    <string name="author_error">Please enter an author</string>
    <string name="desc_error">Please enter a description</string>
    <string name="keywords_error">Please enter some keywords</string>
    <string name="refactor">Refactor</string>
    <string name="comment">Comment</string>
    <string name="replace">Replace</string>
    <string name="empty_field_no_no">This field cannot be empty</string>
    <string name="project_dir_error">Could not create project directory!</string>
    <string name="new_pin">New PIN</string>
    <string name="pin_four_digits">The pin must consist only of 4 digits</string>
    <string name="pin_snack_bar">It is recommended you set a PIN for security in the Settings.</string>
    <string name="not_text_file">The selected file is not a text or image file.</string>
    <string name="new_not_java">New</string>
    <string name="resource_name">Resource name</string>
    <string name="file_success">Successfully created file.</string>
    <string name="file_fail">There was a problem while creating this file.</string>
    <string name="name">Name</string>
    <string name="image_success">Successfully imported image.</string>
    <string name="image_fail">There was a problem while importing this image.</string>
    <string name="font_success">Successfully imported font.</string>
    <string name="font_fail">There was a problem while importing this font.</string>
    <string name="js_success">Successfully imported JS file.</string>
    <string name="js_fail">There was a problem while importing this JS file.</string>
    <string name="resources">Resources</string>
    <string name="delete_resource">Delete Resource?</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="delete_success">Successfully deleted.</string>
    <string name="delete_fail">Unable to delete resource.</string>
    <string name="nope">You can\'t delete this file!</string>
    <string name="from_line">\t— From line\t</string>
    <string name="of">\tof\t</string>
    <string name="search">Search</string>
    <string name="file_ending_warn">File endings will be added automatically.</string>
    <string name="file_ending_warn_image">Please enter a file ending when importing images or fonts.</string>
    <string name="file_ending_warn_title">Show File Ending Warning</string>
    <string name="file_ending_warn_desc">Show small warning while creating and importing project files.</string>
    <string name="loading">Loading...</string>
    <string name="black">#448AFF</string>
</resources>