<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/create_menu_item"
            android:checked="false"
            android:icon="@drawable/ic_create"
            android:title="@string/create" />

        <item
            android:id="@+id/improve_menu_item"
            android:checked="false"
            android:icon="@drawable/ic_edit"
            android:title="@string/edit" />

        <item
            android:id="@+id/pilot_menu_item"
            android:checked="false"
            android:icon="@drawable/ic_pilot"
            android:title="@string/pilot" />

        <item
            android:id="@+id/contribute_menu_item"
            android:checked="false"
            android:icon="@drawable/ic_contribute"
            android:title="@string/contribute" />

        <item
            android:id="@+id/donate_menu_item"
            android:checked="false"
            android:icon="@drawable/ic_donate"
            android:title="@string/donate" />

        <item
            android:id="@+id/settings_menu_item"
            android:checked="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/help_menu_item"
            android:checked="false"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />

    </group>

</menu>